# backend/bin/src/Org.OpenAPITools/wwwroot/openapi-original.json
@@ -13,11 +13,7 @@
     "version" : "1.0.0"
   },
   "servers" : [ {
-    "url" : "/"
-  } ],
-  "tags" : [ {
-    "name" : "open",
-    "description" : "Operations available to anyone"
+    "url" : "http://172.22.42.100:8080/"
   } ],
   "paths" : {
     "/login" : {
@@ -69,7 +65,6 @@
       "put" : {
         "summary" : "changes your user",
         "description" : "Changes your own user",
-        "operationId" : "ModifyUser",
         "parameters" : [ {
           "name" : "newUserData",
           "in" : "query",
@@ -101,7 +96,6 @@
       "get" : {
         "summary" : "searches user Database",
         "description" : "By passing in the appropriate options, you can search for\navailable inventory in the system\n",
-        "operationId" : "searchUserDatabase",
         "parameters" : [ {
           "name" : "searchString",
           "in" : "query",
@@ -161,8 +155,7 @@
     "/users/getAll" : {
       "get" : {
         "summary" : "Returns all users",
-        "description" : "By passing in the appropriate options, you can search for\navailable inventory in the system\n",
-        "operationId" : "getAllUSers",
+        "description" : "By passing in the appropriate options, you can search for available inventory in the system",
         "responses" : {
           "200" : {
             "description" : "All users",
@@ -184,7 +177,6 @@
       "post" : {
         "summary" : "adds an user",
         "description" : "Adds an user to the system",
-        "operationId" : "AddUser",
         "requestBody" : {
           "description" : "User to add",
           "content" : {
